--- a/Source/iOS/DolphiniOS/DolphiniOS/UI/Notices/Analytics/AnalyticsNotice.xib
+++ b/Source/iOS/DolphiniOS/DolphiniOS/UI/Notices/Analytics/AnalyticsNotice.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina5_9" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -14,20 +14,20 @@
             </connections>
         </placeholder>
         <view contentMode="scaleToFill" id="r55-Fn-aBI">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="W3E-IV-CzC" userLabel="Header Stack">
-                    <rect key="frame" x="0.0" y="63.999999999999986" width="375" height="183.66666666666663"/>
+                    <rect key="frame" x="0.0" y="20" width="320" height="142"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SF_tray_and_arrow_up" translatesAutoresizingMaskIntoConstraints="NO" id="IUQ-qk-Kke">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="100" id="hmP-nM-OsB"/>
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Analytics" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MKg-MP-jJG">
-                            <rect key="frame" x="0.0" y="100" width="375" height="83.666666666666686"/>
+                            <rect key="frame" x="0.0" y="100" width="320" height="42"/>
                             <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="34"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -35,26 +35,26 @@
                     </subviews>
                 </stackView>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uo7-Aa-Z1e">
-                    <rect key="frame" x="0.0" y="247.66666666666669" width="375" height="530.33333333333326"/>
+                    <rect key="frame" x="0.0" y="162" width="320" height="266"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="90n-Az-9Cs" userLabel="Content Stack">
-                            <rect key="frame" x="20" y="0.0" width="335" height="365"/>
+                            <rect key="frame" x="20" y="0.0" width="280" height="426"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Do you authorize Dolphin to report information to Dolphin's developers?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u3m-ON-qdg" userLabel="Prompt Text">
-                                    <rect key="frame" x="28" y="0.0" width="279" height="40.666666666666664"/>
+                                    <rect key="frame" x="0.5" y="0.0" width="279" height="41"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G2L-KW-hUh" userLabel="Information Text">
-                                    <rect key="frame" x="0.0" y="60.666666666666657" width="335" height="284.33333333333337"/>
+                                    <rect key="frame" x="0.0" y="61" width="280" height="345"/>
                                     <string key="text">If authorized, Dolphin can collect data on its performance, feature usage, and configuration, as well as data on your system's hardware and operating system.  No private data is ever collected. This data helps us understand how people and emulated games use Dolphin and prioritize our efforts. It also helps us identify rare configurations that are causing bugs, performance and stability issues.  This authorization can be revoked at any time through Dolphin's settings.</string>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6uo-Rc-2vE">
-                                    <rect key="frame" x="47.666666666666686" y="365" width="240" height="0.0"/>
+                                    <rect key="frame" x="20" y="426" width="240" height="0.0"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                     <constraints>
                                         <constraint firstAttribute="height" id="kge-k2-qnG"/>
@@ -74,16 +74,16 @@
                     <viewLayoutGuide key="frameLayoutGuide" id="BUq-vD-SSA"/>
                 </scrollView>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="o40-Qv-36o">
-                    <rect key="frame" x="0.0" y="638" width="375" height="140"/>
+                    <rect key="frame" x="0.0" y="428" width="320" height="140"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fA2-eu-kzr">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="140"/>
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="140"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="np2-xh-cqO">
-                                    <rect key="frame" x="20" y="20" width="335" height="100"/>
+                                    <rect key="frame" x="20" y="20" width="280" height="100"/>
                                     <subviews>
                                         <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jPS-qP-47c">
-                                            <rect key="frame" x="0.0" y="0.0" width="335" height="45"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="280" height="45"/>
                                             <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="45" id="j1f-m3-E7Q"/>
@@ -102,7 +102,7 @@
                                             </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ddp-vN-h8U">
-                                            <rect key="frame" x="0.0" y="55" width="335" height="45"/>
+                                            <rect key="frame" x="0.0" y="55" width="280" height="45"/>
                                             <state key="normal" title="No">
                                                 <color key="titleColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             </state>
@@ -132,7 +132,7 @@
                 <constraint firstItem="W3E-IV-CzC" firstAttribute="top" secondItem="Bm9-Am-iRC" secondAttribute="top" constant="20" id="Ixq-TV-fPR"/>
                 <constraint firstItem="uo7-Aa-Z1e" firstAttribute="trailing" secondItem="Bm9-Am-iRC" secondAttribute="trailing" id="OhX-j2-NPF"/>
                 <constraint firstItem="uo7-Aa-Z1e" firstAttribute="top" secondItem="W3E-IV-CzC" secondAttribute="bottom" id="Qlb-Sy-Zj4"/>
-                <constraint firstItem="uo7-Aa-Z1e" firstAttribute="bottom" secondItem="Bm9-Am-iRC" secondAttribute="bottom" id="bFd-1Z-7Ng"/>
+                <constraint firstItem="uo7-Aa-Z1e" firstAttribute="bottom" secondItem="o40-Qv-36o" secondAttribute="top" id="bFd-1Z-7Ng"/>
                 <constraint firstItem="o40-Qv-36o" firstAttribute="bottom" secondItem="Bm9-Am-iRC" secondAttribute="bottom" id="dbe-Y0-l12"/>
                 <constraint firstItem="o40-Qv-36o" firstAttribute="trailing" secondItem="Bm9-Am-iRC" secondAttribute="trailing" id="gGE-fA-t5H"/>
                 <constraint firstItem="o40-Qv-36o" firstAttribute="leading" secondItem="Bm9-Am-iRC" secondAttribute="leading" id="hZ3-lK-dtJ"/>
